--- a/index.html
+++ b/index.html
@@ -22,5 +22,42 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Order summary card</title>
   </head>
-  <body></body>
+  <body>
+    <article class="summary-card">
+      <!--Card Header-->
+      <header>
+        <img src="./images/illustration-hero.svg" alt="" />
+      </header>
+      <!--Card Header End-->
+
+      <main>
+        <!--Order Summary Section-->
+        <section class="order-summary">
+          <h1>Order Summary</h1>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
+        </section>
+        <!--Order Summary Section End-->
+
+        <!--Plan Selection-->
+        <section class="plan-selection">
+          <img src="./images/icon-music.svg" alt="" />
+
+          <div class="pricing-details">
+            <span>Annual Plan</span>
+            <span>$59.99/year</span>
+          </div>
+
+          <button type="button">Change</button>
+        </section>
+        <!--Plan Selection End-->
+
+        <button type="button" class="proceed-btn">Proceed to Payment</button>
+
+        <button type="button" class="cancel-btn">Cancel Order</button>
+      </main>
+    </article>
+  </body>
 </html>
