Replace <main> with <div>

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </header>
       <!--Card Header End-->
 
-      <main>
+      <div>
         <!--Order Summary Section-->
         <section class="order-summary">
           <h1>Order Summary</h1>
@@ -57,7 +57,7 @@
         <button type="button" class="proceed-btn">Proceed to Payment</button>
 
         <button type="button" class="cancel-btn">Cancel Order</button>
-      </main>
+      </div>
     </article>
   </body>
 </html>
